html et js pour les swiper

--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,2 +1,28 @@
+    <div class="wrapper">
+        <div class="footer">
+            <h2>Contactez-moi</h2>
+            <p>Afin qu'on puisse parler de <div class="bold">votre</div> projet</p>
+            <div class="contacts">
+                <ul>
+                    <li a="href=#"><div class="container">
+                                    <svg class="icon">
+                                        <use href="#icon-Be"></use>
+                                    </svg>
+                                </div></li>
+                    <li a="href=#"><div class="container">
+                                    <svg class="icon">
+                                        <use href="#icon-Be"></use>
+                                    </svg>
+                                </div></li>
+                    <li a="href=#"><div class="container">
+                                    <svg class="icon">
+                                        <use href="#icon-Be"></use>
+                                    </svg>
+                                </div></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    
     </body>
 </html>
