--- a/src/_partials/_header.html
+++ b/src/_partials/_header.html
@@ -10,3 +10,10 @@
     </head>
 
     <body>
+
+        <header>
+            <div class="wrapper">
+                <h4>Billy Green</h4>
+            </div>
+            
+        </header>
