css hero et header

--- a/src/index.html
+++ b/src/index.html
@@ -1,93 +1,99 @@
 {% include "_partials/_header.html" %}
 
 <!-- Votre contenu ici -->
-<div class="wrapper hero">
+<div class="hero">
     <div class="hero_media">
         <img src="./assets/images/hero.jpg" />
     </div>
-    <div class="hero_content">
-        <h1>Mon cahier d'exercice</h1>
+    <div class="hero_content wrapper">
+        <h1>
+            Mon cahier
+            <br />
+            d'exercice
+        </h1>
     </div>
 </div>
 
-<div class="laboratoires wrapper">
-    <h2>
-        Mes premiers
-        <div class="bold">laboratoires</div>
-    </h2>
+<div class="laboratoires">
+    <div class="wrapper">
+        <h2>
+            Mes premiers
+            <span class="bold">laboratoires</span>
+        </h2>
 
-    <div class="cards">
-        <div class="card">
-            <div class="card_media">
-                <img src="./assets/images/img_labo1.png" />
-            </div>
-            <div class="card_content">
-                <h3>Sem 01 - Révision</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                <h5>html + css</h5>
-                <div class="button">
-                    <a href="#">Voir le laboratoire</a>
-                    <div class="container">
-                        <svg class="icon">
-                            <use href="#icon-chevron-right"></use>
-                        </svg>
+        <div class="cards">
+            <div class="card">
+                <div class="card_media">
+                    <img src="./assets/images/img_labo1.png" />
+                </div>
+                <div class="card_content">
+                    <h3>Sem 01 - Révision</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <h5>html + css</h5>
+                    <div class="button">
+                        <a href="#">Voir le laboratoire</a>
+                        <div class="container">
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="card">
-            <div class="card_media">
-                <img src="./assets/images/img_labo2.png" />
-            </div>
-            <div class="card_content">
-                <h3>Sem 02 - Timtools</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                <h5>scss</h5>
-                <div class="button">
-                    <a href="#">Voir le laboratoire</a>
-                    <div class="container">
-                        <svg class="icon">
-                            <use href="#icon-chevron-right"></use>
-                        </svg>
+            <div class="card">
+                <div class="card_media">
+                    <img src="./assets/images/img_labo2.png" />
+                </div>
+                <div class="card_content">
+                    <h3>Sem 02 - Timtools</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <h5>scss</h5>
+                    <div class="button">
+                        <a href="#">Voir le laboratoire</a>
+                        <div class="container">
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="card">
-            <div class="card_media">
-                <img src="./assets/images/img_labo3.png" />
-            </div>
-            <div class="card_content">
-                <h3>Sem 03 - Portfolio Louis Lajoie</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                <h5>html + scss</h5>
-                <div class="button">
-                    <a href="#">Voir le laboratoire</a>
-                    <div class="container">
-                        <svg class="icon">
-                            <use href="#icon-chevron-right"></use>
-                        </svg>
+            <div class="card">
+                <div class="card_media">
+                    <img src="./assets/images/img_labo3.png" />
+                </div>
+                <div class="card_content">
+                    <h3>Sem 03 - Portfolio Louis Lajoie</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <h5>html + scss</h5>
+                    <div class="button">
+                        <a href="#">Voir le laboratoire</a>
+                        <div class="container">
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
 
-        <div class="card">
-            <div class="card_media">
-                <img src="./assets/images/img_labo4.png" />
-            </div>
-            <div class="card_content">
-                <h3>Sem 04 - Icônes et classes js</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                <h5>scss + js</h5>
-                <div class="button">
-                    <a href="#">Voir le laboratoire</a>
-                    <div class="container">
-                        <svg class="icon">
-                            <use href="#icon-chevron-right"></use>
-                        </svg>
+            <div class="card">
+                <div class="card_media">
+                    <img src="./assets/images/img_labo4.png" />
+                </div>
+                <div class="card_content">
+                    <h3>Sem 04 - Icônes et classes js</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <h5>scss + js</h5>
+                    <div class="button">
+                        <a href="#">Voir le laboratoire</a>
+                        <div class="container">
+                            <svg class="icon">
+                                <use href="#icon-chevron-right"></use>
+                            </svg>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -99,7 +105,7 @@
     <div class="wrapper">
         <h2>
             Mes laboratoires
-            <div class="bold">réactifs</div>
+            <span class="bold">réactifs</span>
         </h2>
 
         <div class="swiper js-swiper js-swiper-pagination">
