ajustement des cartes et des emplacements de celle ci

--- a/src/index.html
+++ b/src/index.html
@@ -31,11 +31,13 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                     <h5>html + css</h5>
                     <div class="button">
-                        <a href="#">Voir le laboratoire</a>
-                        <div class="container">
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
+                        <div class="button_content">
+                            <a href="#">Voir le laboratoire</a>
+                            <div class="container">
+                                <svg class="icon icon--lg">
+                                    <use href="#icon-chevron-right"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -50,11 +52,13 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                     <h5>scss</h5>
                     <div class="button">
-                        <a href="#">Voir le laboratoire</a>
-                        <div class="container">
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
+                        <div class="button_content">
+                            <a href="#">Voir le laboratoire</a>
+                            <div class="container">
+                                <svg class="icon icon--lg">
+                                    <use href="#icon-chevron-right"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -69,30 +73,34 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                     <h5>html + scss</h5>
                     <div class="button">
-                        <a href="#">Voir le laboratoire</a>
-                        <div class="container">
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
+                        <div class="button_content">
+                            <a href="#">Voir le laboratoire</a>
+                            <div class="container">
+                                <svg class="icon icon--lg">
+                                    <use href="#icon-chevron-right"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
 
-            <div class="card">
+            <div class="card right">
                 <div class="card_media">
                     <img src="./assets/images/img_labo4.png" />
                 </div>
                 <div class="card_content">
                     <h3>Sem 04 - Icônes et classes js</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <p>Laboratoire de révision et de nouvelle matière en java script ainsi que des exercices sur les icones.</p>
                     <h5>scss + js</h5>
                     <div class="button">
-                        <a href="#">Voir le laboratoire</a>
-                        <div class="container">
-                            <svg class="icon">
-                                <use href="#icon-chevron-right"></use>
-                            </svg>
+                        <div class="button_content">
+                            <a href="#">Voir le laboratoire</a>
+                            <div class="container">
+                                <svg class="icon icon--lg">
+                                    <use href="#icon-chevron-right"></use>
+                                </svg>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -122,7 +130,7 @@
                             <div class="button">
                                 <a href="#">Voir le laboratoire</a>
                                 <div class="container">
-                                    <svg class="icon">
+                                    <svg class="icon icon--lg">
                                         <use href="#icon-chevron-right"></use>
                                     </svg>
                                 </div>
@@ -142,7 +150,7 @@
                             <div class="button">
                                 <a href="#">Voir le laboratoire</a>
                                 <div class="container">
-                                    <svg class="icon">
+                                    <svg class="icon icon--lg">
                                         <use href="#icon-chevron-right"></use>
                                     </svg>
                                 </div>
@@ -162,7 +170,7 @@
                             <div class="button">
                                 <a href="#">Voir le laboratoire</a>
                                 <div class="container">
-                                    <svg class="icon">
+                                    <svg class="icon icon--lg">
                                         <use href="#icon-chevron-right"></use>
                                     </svg>
                                 </div>
