css de la section reactive et importation d'images

--- a/src/index.html
+++ b/src/index.html
@@ -28,11 +28,11 @@
                 </div>
                 <div class="card_content">
                     <h3>Sem 01 - Révision</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <p>Pratique et révision de matières vue en cours de web 1 et 2.</p>
                     <h5>html + css</h5>
                     <div class="button">
                         <div class="button_content">
-                            <a href="#">Voir le laboratoire</a>
+                            <a href="https://bgreen.dectim.ca/cours/cw3/sem01/">Voir le laboratoire</a>
                             <div class="container">
                                 <svg class="icon icon--lg">
                                     <use href="#icon-chevron-right"></use>
@@ -49,11 +49,11 @@
                 </div>
                 <div class="card_content">
                     <h3>Sem 02 - Timtools</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <p>Site pour pratiquer les importations et travailler avec le main.scss du stack</p>
                     <h5>scss</h5>
                     <div class="button">
                         <div class="button_content">
-                            <a href="#">Voir le laboratoire</a>
+                            <a href="https://bgreen.dectim.ca/cours/cw3/sem02/">Voir le laboratoire</a>
                             <div class="container">
                                 <svg class="icon icon--lg">
                                     <use href="#icon-chevron-right"></use>
@@ -70,11 +70,11 @@
                 </div>
                 <div class="card_content">
                     <h3>Sem 03 - Portfolio Louis Lajoie</h3>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                    <p>Portfolio fictif pour la pratique du stack TimTools avec des notions de html et de scss.</p>
                     <h5>html + scss</h5>
                     <div class="button">
                         <div class="button_content">
-                            <a href="#">Voir le laboratoire</a>
+                            <a href="https://bgreen.dectim.ca/cours/cw3/sem03/">Voir le laboratoire</a>
                             <div class="container">
                                 <svg class="icon icon--lg">
                                     <use href="#icon-chevron-right"></use>
@@ -95,7 +95,7 @@
                     <h5>scss + js</h5>
                     <div class="button">
                         <div class="button_content">
-                            <a href="#">Voir le laboratoire</a>
+                            <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
                             <div class="container">
                                 <svg class="icon icon--lg">
                                     <use href="#icon-chevron-right"></use>
@@ -112,11 +112,11 @@
 <div class="labo_reactive">
     <div class="wrapper">
         <h2>
-            Mes laboratoires
-            <span class="bold">réactifs</span>
+            Mes
+            <span class="bold">laboratoires réactifs</span>
         </h2>
 
-        <div class="swiper js-swiper js-swiper-pagination">
+        <div class="swiper js-swiper js-swiper-pagination cards">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
                     <div class="card">
@@ -128,11 +128,13 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                             <h5>scss + js</h5>
                             <div class="button">
-                                <a href="#">Voir le laboratoire</a>
-                                <div class="container">
-                                    <svg class="icon icon--lg">
-                                        <use href="#icon-chevron-right"></use>
-                                    </svg>
+                                <div class="button_content">
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <div class="container">
+                                        <svg class="icon icon--lg">
+                                            <use href="#icon-chevron-right"></use>
+                                        </svg>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -148,11 +150,13 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                             <h5>scss + js</h5>
                             <div class="button">
-                                <a href="#">Voir le laboratoire</a>
-                                <div class="container">
-                                    <svg class="icon icon--lg">
-                                        <use href="#icon-chevron-right"></use>
-                                    </svg>
+                                <div class="button_content">
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <div class="container">
+                                        <svg class="icon icon--lg">
+                                            <use href="#icon-chevron-right"></use>
+                                        </svg>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -168,11 +172,13 @@
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
                             <h5>scss + js</h5>
                             <div class="button">
-                                <a href="#">Voir le laboratoire</a>
-                                <div class="container">
-                                    <svg class="icon icon--lg">
-                                        <use href="#icon-chevron-right"></use>
-                                    </svg>
+                                <div class="button_content">
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <div class="container">
+                                        <svg class="icon icon--lg">
+                                            <use href="#icon-chevron-right"></use>
+                                        </svg>
+                                    </div>
                                 </div>
                             </div>
                         </div>
