finissions section reactive et section footer

--- a/src/index.html
+++ b/src/index.html
@@ -121,15 +121,15 @@
                 <div class="swiper-slide">
                     <div class="card">
                         <div class="card_media">
-                            <img src="./assets/images/img_labo4.png" />
+                            <img src="./assets/images/img_labo7.png" />
                         </div>
                         <div class="card_content">
-                            <h3>Sem 04 - Icônes et classes js</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                            <h5>scss + js</h5>
+                            <h3>Sem 07 - Reactive et JS</h3>
+                            <p>Apprentissage du reactive en scss et apprentissage en java script</p>
+                            <h5>html + scss + js</h5>
                             <div class="button">
                                 <div class="button_content">
-                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem07/">Voir le laboratoire</a>
                                     <div class="container">
                                         <svg class="icon icon--lg">
                                             <use href="#icon-chevron-right"></use>
@@ -143,15 +143,15 @@
                 <div class="swiper-slide">
                     <div class="card">
                         <div class="card_media">
-                            <img src="./assets/images/img_labo4.png" />
+                            <img src="./assets/images/img_labo8.png" />
                         </div>
                         <div class="card_content">
-                            <h3>Sem 04 - Icônes et classes js</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
-                            <h5>scss + js</h5>
+                            <h3>Sem 08 - Reactive</h3>
+                            <p>Pratique en reactive, scss et html.</p>
+                            <h5>html + scss</h5>
                             <div class="button">
                                 <div class="button_content">
-                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem08/">Voir le laboratoire</a>
                                     <div class="container">
                                         <svg class="icon icon--lg">
                                             <use href="#icon-chevron-right"></use>
@@ -165,15 +165,15 @@
                 <div class="swiper-slide">
                     <div class="card">
                         <div class="card_media">
-                            <img src="./assets/images/img_labo4.png" />
+                            <img src="./assets/images/img_labo9.png" />
                         </div>
                         <div class="card_content">
-                            <h3>Sem 04 - Icônes et classes js</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ultrices lorem non feugiat egestas amet.</p>
+                            <h3>Sem 09 - Librairie Swiper.js et javascript</h3>
+                            <p>Apprentissage sur la librairie swiper.js et approfondissement des connaissances en java script.</p>
                             <h5>scss + js</h5>
                             <div class="button">
                                 <div class="button_content">
-                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem04/">Voir le laboratoire</a>
+                                    <a href="https://bgreen.dectim.ca/cours/cw3/sem09/">Voir le laboratoire</a>
                                     <div class="container">
                                         <svg class="icon icon--lg">
                                             <use href="#icon-chevron-right"></use>
