--- a/src/_partials/_footer.html
+++ b/src/_partials/_footer.html
@@ -1,28 +1,29 @@
+<div class="footer">
     <div class="wrapper">
-        <div class="footer">
-            <h2>Contactez-moi</h2>
-            <p>Afin qu'on puisse parler de <div class="bold">votre</div> projet</p>
-            <div class="contacts">
-                <ul>
+        <h2>Contactez-<span class="bold">moi</span></h2>
+        <p>Afin qu'on puisse parler de <span class="bold">votre</span> projet</p>
+        <div class="contacts">
+            <ul>
+                <li a="href=#"><div class="container">
+                                <svg class="icon icon--lg">
+                                    <use href="#icon-Be"></use>
+                                </svg>
+                                </div></li>
                     <li a="href=#"><div class="container">
-                                    <svg class="icon">
-                                        <use href="#icon-Be"></use>
+                                    <svg class="icon icon--lg">
+                                        <use href="#icon-Messenger"></use>
                                     </svg>
                                 </div></li>
                     <li a="href=#"><div class="container">
-                                    <svg class="icon">
-                                        <use href="#icon-Be"></use>
-                                    </svg>
-                                </div></li>
-                    <li a="href=#"><div class="container">
-                                    <svg class="icon">
+                                    <svg class="icon icon--lg">
                                         <use href="#icon-Be"></use>
                                     </svg>
                                 </div></li>
                 </ul>
             </div>
-        </div>
     </div>
-    
+</div>
+
+
     </body>
 </html>
